# PoliticAIl

./: .env.development  .env.example  .gitignore  .prettierignore  DESKTOP_IMPLEMENTATION_SUMMARY.md  POLITICAL_ENTITIES_IMPLEMENTATION.md  README.md  STATE_MANAGEMENT.md  WINDOW_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
.claude/agents/: research-analyst.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  dependency-review.yml  integration-tests.yml  status.yml
docs/: api-reference.md  architecture.md  developer-guide.md  validation-results.md  window-persistence.md
plan/prototype/: 4-week-task-breakdown.md  implementation-task-breakdown.md  llm-integration-requirements.md  prototype-architecture.md  success-metrics-testing.md  tasks.md  ux-validation-framework.md
research/001-initial-research/: README.md  blueprint-architecture.md  data-schemas.md  desktop-ui-architecture.md  engine-stack-analysis.md  executive-summary.md  llm-integration-patterns.md  mvp-roadmap.md  news-api-integration.md  political-simulation-design.md  risk-mitigation.md  test-success-metrics.md
scripts/: healthCheck.js  integration-test-runner.js  memory-test.js  performance-check.js  test_database.js  validateEntities.js
src/: App.css  App.tsx  index.js  main.tsx  styles.css
src-tauri/: Cargo.toml
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/ai/: README.md  index.ts  (+5 more)
(+98 files in other folders)
